--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src",
     "dev": "nodemon --exec ts-node src/main.ts",
     "start": "node dist/main.js",
     "database": "npx prisma generate && npx prisma migrate dev --name init",
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.22",
     "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.3"
   }
 }
