altera script no package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "build": "tsup src",
     "dev": "nodemon --exec ts-node src/main.ts",
