--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "18"
   },
   "scripts": {
-    "build": "tsup src",
+    "prebuild": "rimraf dist",
+    "build": "npm run prebuild && tsup src",
     "dev": "nodemon --exec ts-node src/main.ts",
     "start": "node dist/main.js",
     "database": "npx prisma generate && npx prisma migrate dev --name init",
